# Fireworks-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  fire  hello  hello.cpp
.github/: FUNDING.yml
Dependencies/Assimp/lib/: IrrXMLd.lib  assimp-vc142-mtd.lib  zlibstaticd.lib
Dependencies/BZIP2/lib/: bzip2.lib
Dependencies/Box2D/lib/: .box2d.lib.icloud  box2d.lib
Dependencies/Falken/lib/: falken_cpp_sdk.lib
Dependencies/FreeType/: README.md
Dependencies/FreeType/include/freetype/: ftcache.h
Dependencies/FreeType/include/freetype/config/: ftoption.h
Dependencies/FreeType/win64/: freetype.lib
Dependencies/GLEW/lib/: .glew32s.lib.icloud
Dependencies/GLFW/lib/: glfw3.lib
Dependencies/SOIL/lib/: soil.lib
Dependencies/falken/lib/: falken_cpp_sdk_static.lib
Dependencies/imgui/: imgui.ini  testing
Examples/: ExampleTemplate.cpp  ImGuiTest.cpp  SimpleBox.h  TestGame  TestGame.cpp  imgui.ini  main  main.cpp
Examples/physics-sims/: Freefall.h
Fireworks Engine/: Fireworks Engine.sln
Fireworks Engine/Fireworks Core/: Fireworks Core.vcxproj  Fireworks Core.vcxproj.filters  falken_config.json  fireworks.cpp  fireworks.h  fwpch.cpp  fwpch.h
Fireworks Engine/Fireworks Core/src/audio/: audioclip.cpp  audioclip.h
Fireworks Engine/Fireworks Core/src/components/: component.cpp  component.h  components.h  rigidbody2dcomponent.cpp  rigidbody2dcomponent.h
Fireworks Engine/Fireworks Core/src/graphics/: Shader.cpp  Shader.h  ShotRenderer2D.cpp  ShotRenderer2D.h  Window.cpp  Window.h  batchrenderer2d.cpp  batchrenderer2d.h  batchrenderer3d.cpp  batchrenderer3d.h  camera2d.cpp  camera2d.h  freeflycamera.cpp  freeflycamera.h  instancerenderer2d.cpp  instancerenderer2d.h  mesh.cpp  mesh.h  model.cpp  model.h  perspectivecamera.cpp  perspectivecamera.h  renderer2d.h  renderer3d.h  scene.cpp  scene.h  scene3d.cpp  scene3d.h  texture.cpp  texture.h
Fireworks Engine/Fireworks Core/src/graphics/buffers/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  indexbuffer.cpp  indexbuffer.h  renderbuffer.cpp  renderbuffer.h  vertexarray.cpp  vertexarray.h
Fireworks Engine/Fireworks Core/src/managers/: physicsmanager.h
Fireworks Engine/Fireworks Core/src/maths/: mat4.cpp  mat4.h  maths.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp
Fireworks Engine/Fireworks Core/src/physics/: rigidbody2d.cpp  rigidbody2d.h
Fireworks Engine/Fireworks Core/src/shaders/: basic.vert
Fireworks Engine/Fireworks Core/src/utils/: fileutils.h  glassert.h  timer.h  wavloader.h
Fireworks Engine/LD47/: LD47.vcxproj  LD47.vcxproj.filters  MainGame.cpp  MainGame.h
Fireworks Engine/LD47/shaders/: basic.frag  basic.vert
Fireworks Engine/LD47/src/: AABBCollisionManager.h
Fireworks Engine/Sandbox/: ExampleTemplate.cpp  Sandbox.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Fireworks Engine/Sandbox/Test Dependencies/imgui-docking/: Exmain.cpp
Fireworks Engine/Sandbox/examples/: BunnysJourney.h  HungryBox.h  LightSaber.h  RockyDocky.h  SimpleBox.h  TextGuru.h  Zapper.h  groupsdemo.h  textureImages.h
Fireworks Engine/Sandbox/examples/falkengame/: ship.h
Fireworks Engine/Sandbox/shaders/: basic.frag  basic.vert  fade.frag  font.frag  light.frag  mesh.frag  mesh.vert  sick.frag
Fireworks Engine/Sandbox/test/: EditorGUI.h  animatedSpritesTest.h  audiotest.h  batch2dTest.h  camImplementation.h  falken_test_game.h  fontTest.h  instantspritedraw.h  phyTest.h  scene3DTest.h  testFBO.h  testGUI.h
Resources/: Drake.aseprite
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/x64/Debug/: vc142.idb
Sandbox/x64/Debug/Sandbox.tlog/: Sandbox.lastbuildstate
docs/: Doxyfile
docs/html/: _f_ireworks_01_intro_8md.html  _shader_8h.html  _shader_8h.js  _shader_8h__dep__incl.dot  _shot_renderer2_d_8h.html  _shot_renderer2_d_8h__dep__incl.dot  _shot_renderer2_d_8h__incl.dot  _shot_renderer2_d_8h_source.html  _window_8cpp.js  _window_8cpp__incl.dot  _window_8h.html  _window_8h_source.html  annotated.html  audioclip_8cpp__incl.dot  audioclip_8h.html  audioclip_8h__incl.dot  audioclip_8h_source.html  batchrenderer2d_8cpp.html  batchrenderer2d_8h.html  batchrenderer2d_8h.js  batchrenderer2d_8h__incl.dot  batchrenderer2d_8h_source.html  batchrenderer3d_8h.html  batchrenderer3d_8h.js  batchrenderer3d_8h__dep__incl.dot  batchrenderer3d_8h_source.html  buffer_8cpp.html  buffer_8h.html  buffer_8h.js  buffer_8h__dep__incl.dot  buffer_8h__incl.dot  buffer_8h_source.html  camera2d_8cpp.html  camera2d_8cpp__incl.dot  camera2d_8h.html  camera2d_8h__dep__incl.dot  camera2d_8h__incl.dot  camera2d_8h_source.html  class_physics_manager-members.html  class_physics_manager.html  (+356 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_2.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enums_5.js  enumvalues_0.js  enumvalues_15.js  enumvalues_16.js  enumvalues_18.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+57 more)
docs/source/: conf.py
docs/sphinx/: conf.py  index.rst
docs_pages/: FIreworks Intro.md
fireworks-core/: main.cpp
fireworks-core/ext/: gltext.h
fireworks-core/src/graphics/: Shader.cpp  Shader.h  Window.cpp  Window.h  batchrenderer2d.cpp  batchrenderer2d.h  renderable2d.h  renderer2d.h  simple2drenderer.cpp  simple2drenderer.h  sprite.cpp  sprite.h  texture.cpp  texture.h
fireworks-core/src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp
fireworks-core/src/graphics/layers/: group.cpp  group.h  layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
fireworks-core/src/graphics/renderables/: sprite.cpp  static_sprite.h
fireworks-core/src/maths/: mat4.cpp  mat4.h  maths.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
fireworks-core/src/shaders/: basic.frag  basic.vert
fireworks-core/src/utils/: fileutils.h  imageloader.h  timer.h
(+21 files in other folders)
